--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container_descricao">
             <h2 class="descricao_titulo"> Assista do seu jeito </h2>
             <p class="descricao__titulo"> Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-                aparelhos. Nossa seleção de cursos não para de crescer. </p>
+                aparelhos. Nossa seleção de cursos não para de crescer</p>
         </div>
     </section>
     <section class="container secundario">
